--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -webkit-flex;
   display: flex;
   position: relative;
-  float: left;
+  float: center;
   padding: 0;
   margin: 0;
   width: 100%;
