--- a/css/responsive-clock.css
+++ b/css/responsive-clock.css
@@ -184,7 +184,7 @@
 }
 
 .flip-clock-divider .flip-clock-label {
-  color: white !important;
+  color: red !important;
   font-size: 14px !important;
   font-weight: bold !important;
   font-family: Sofia Sans Condensed !important; 
