--- a/css/style.css
+++ b/css/style.css
@@ -1908,3 +1908,23 @@ form label {
     border-radius: 4px;
     z-index: 10;
   }
+
+  heart-grid {
+      display: grid;
+      grid-template-columns: repeat(9, 80px);
+      grid-auto-rows: 80px;
+      gap: 5px;
+      justify-content: center;
+    }
+
+    .cell {
+      background: #eee;
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+    }
+
+    /* Posisi berbentuk hati (1 = isi gambar, 0 = kosong) */
+    .cell.blank {
+      visibility: hidden;
+    }
